--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -80,6 +80,14 @@
   publisher = {Springer}
 }
 
+@Manual{Oelschläger:2023,
+  title = {optimizeR: Unified Framework for Numerical Optimizer},
+  author = {Oelschläger, Lennart and Ötting, Marius},
+  year = {2023},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=optimizeR}
+}
+
 @article{Paap:2000,
 	author = {Richard Paap and Philip Hans Franses},
 	journal = {Journal of Applied Econometrics},
@@ -118,6 +126,15 @@
 	publisher    = {Cambridge Univ. Press},
 	year         = {2009}
 }
+
+@Manual{Chang:2021,
+  title = {R6: Encapsulated Classes with Reference Semantics},
+  author = {Winston Chang},
+  year = {2021},
+  note = {R package version 2.5.1},
+  url = {https://CRAN.R-project.org/package=R6}
+}
+
 @book{zucchini2016,
   title={Hidden {Markov Models} for {Time Series}: {An Introduction} {U}sing {R}},
   author={Zucchini, Walter and MacDonald, Iain L and Langrock, Roland},
