--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -19,8 +19,8 @@ knitr::opts_chunk$set(
   out.width = "75%",
   eval = FALSE
 )
-#library("ino")
-devtools::load_all() # remove later
+library("ino")
+# devtools::load_all() # remove later
 set.seed(1)
 hmm_ino <- ino::hmm_ino
 ```
@@ -33,9 +33,8 @@ The example data set considered throughout this vignette covers a time series of
 
 ```{r message = FALSE, warning = FALSE, eval = TRUE}
 library("dplyr")
-# data <- fHMM::download_data(symbol = "DBK.DE", from = "2000-01-01", file = NULL)
-# remove later
-data <- read.csv("D:/sciebo/lasso_select_N/DB.csv") %>% slice(788:nrow(.))
+data <- fHMM::download_data(symbol = "DBK.DE", from = "2000-01-01", file = NULL)
+# data <- read.csv("D:/sciebo/lasso_select_N/DB.csv") %>% slice(788:nrow(.))
 db_data <- data %>%
   as_tibble() %>%
   summarize(date = as.Date(Date, format = "%Y-%m-%d"),
