--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -41,6 +41,14 @@
   publisher = {Springer Science \& Business Media}
 }
 
+@Manual{Chang:2021,
+  title = {R6: Encapsulated Classes with Reference Semantics},
+  author = {Winston Chang},
+  year = {2021},
+  note = {R package version 2.5.1},
+  url = {https://CRAN.R-project.org/package=R6}
+}
+
 @article{Haaijer:1998,
 	author = {Rinus Haaijer and Michel Wedel and Marco Vriens and Tom Wansbeek},
 	journal = {Marketing Science},
@@ -127,12 +135,12 @@
 	year         = {2009}
 }
 
-@Manual{Chang:2021,
-  title = {R6: Encapsulated Classes with Reference Semantics},
-  author = {Winston Chang},
-  year = {2021},
-  note = {R package version 2.5.1},
-  url = {https://CRAN.R-project.org/package=R6}
+@book{Wickham:2019,
+  title     = {Advanced r},
+  author    = {Wickham, Hadley},
+  year      = {2019},
+  publisher = {CRC press},
+  doi       = {10.1201/9781351201315}
 }
 
 @book{zucchini2016,
