--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -19,8 +19,8 @@ knitr::opts_chunk$set(
   out.width = "75%",
   eval = FALSE
 )
-library("ino")
-# devtools::load_all() # remove later
+# library("ino")
+devtools::load_all() # remove later
 set.seed(1)
 hmm_ino <- ino::hmm_ino
 ```
@@ -37,7 +37,7 @@ data <- fHMM::download_data(symbol = "DBK.DE", from = "2000-01-01", file = NULL)
 # data <- read.csv("D:/sciebo/lasso_select_N/DB.csv") %>% slice(788:nrow(.))
 db_data <- data %>%
   as_tibble() %>%
-  summarize(date = as.Date(Date, format = "%Y-%m-%d"),
+  reframe(date = as.Date(Date, format = "%Y-%m-%d"),
             obs = c(NA, diff(log(Close), lag=1) * 100)) %>%
   filter(!is.na(obs)) %>%
   print()
@@ -51,7 +51,7 @@ ggplot(db_data, aes(x = date, y = obs)) +
   ylab("log-returns [%]")
 ```
 
-As the share returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions. The (log-)likelihood of a Gaussian-HMM is implemented in the function `f_ll_hmm()`.
+As the share returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions. The (log-)likelihood of a Gaussian-HMM is given by the function `f_ll_hmm()`.
 
 ## Model fitting
 
@@ -88,16 +88,22 @@ hmm_ino$optimize(initial = sampler, runs = 50, label = "random",
                  save_results = TRUE)
 ```
 
-### Fixed initialization
+### Educated guesses
 
-For selecting fixed starting values, we consider three sets of starting values that fall in the ranges considered above:
+For selecting fixed starting values, we consider three sets of starting values that fall in the ranges considered above. These can be considered as "educated guesses" and are likely to be close to the global optimum:
 
 ```{r, eval = FALSE}
-starting_values <- list(c(-2, -2, 0, 0, log(2), log(3)), 
-                        c(-1.5, -1.5, -0.1, 0.1, log(1), log(2)),
-                        c(-1, -1, -0.2, 2, log(2), log(2)))
+tpm_entry_1 <- tpm_entry_2 <- c(-2, -1.5)
+mu_1 <- c(0, -0.1)
+mu_2 <- c(0, 0.1)
+sd_1 <- c(log(2), log(1))
+sd_2 <- c(log(3), log(1.5))
+
+starting_values <- asplit(expand.grid(tpm_entry_1, tpm_entry_2, 
+                                      mu_1, mu_2, sd_1, sd_2), MARGIN = 1)
+
 for(val in starting_values)
-  hmm_ino$optimize(initial = val, save_results = TRUE, label = "fixed")
+  hmm_ino$optimize(initial = val, save_results = TRUE, label = "educated_guess")
 ```
 
 ### Subset initialization
@@ -135,7 +141,7 @@ hmm_ino$optima()
 
 The frequency table indicates that `r hmm_ino$optima() %>% slice(1) %>% pull(frequency)` out of `r sum(hmm_ino$optima()$frequency)` runs converged to the same likelihood value, which appears to be the global optimum (note these are the negative log-likelihood values).  
 
-Using `summary()`, we can investigate the computation time ("seconds"), the resulting optimum ("value") and the corresponding initialization strategy ("label") for all runs: 
+Using `summary()`, we can investigate the computation time ("seconds"), the resulting optimum ("value") and the corresponding initialization strategy ("label") of all runs (here, only the first 10 are shown): 
 
 ```{r eval=TRUE}
 hmm_ino$summary(c("value", "seconds", "label")) %>% 
@@ -158,7 +164,7 @@ hmm_ino$best_value
 
 ### Optimization time
 
-We use the `plot()` function to investigate the computation time. Intuitively, optimization runs with fixed starting values should be faster than with random starting values, since we have carefully chosen the fixed starting values by investigating the data. The boxplots confirm this intuition: 
+We use the `plot()` function to investigate the computation time. Intuitively, optimization runs our educated guesses be faster than with random starting values, since we have carefully chosen these starting values by investigating the data. The boxplots confirm this intuition: 
 
 ```{r eval=TRUE}
 plot(hmm_ino, by = "label", nrow = 1)
@@ -181,7 +187,7 @@ summary(hmm_ino, c("label", "value", "seconds")) %>%
   summarise(proportion_global_optimum = mean(global_optimum))
 ```
 
-While for the fixed starting values all runs converge to the global optimum, the random initialization and subset initialization strategies do sometimes get stuck in local maxima.
+While for the educated guesses starting values all runs converge to the global optimum, the random initialization and subset initialization strategies do sometimes get stuck in local maxima.
 
 Let's again compare the average computation time, but only for those runs that lead to the global optimum:
 
